<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="5dp">
    <TextView android:id="@+id/selected_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:hint="@string/placeholder_title"/>

    <TextView android:id="@+id/selected_text"
        android:gravity="top"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:hint="@string/new_text"
        android:layout_gravity="top"
        android:textSize="18sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button android:id="@+id/button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:textAllCaps="false"
            android:text="@string/selected_button_delete"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:onClick="deleteSwitchView"/>

    </RelativeLayout>
</LinearLayout>