<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">
    <EditText android:id="@+id/title_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_title"/>

    <EditText android:id="@+id/text_input"
        android:gravity="top"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:hint="@string/new_text"
        android:layout_gravity="top"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:textAllCaps="false"
            android:text="@string/button_add"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:onClick="todoSwitchView"/>

    </RelativeLayout>
</LinearLayout>

<!--
   <Button android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:textAllCaps="false"
            android:text="@string/button_cancel"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/button_add"
            android:layout_marginStart="10dp"/>
-->